tests/ui/duplicate-name-multi.fail.rs
ident_str::ident_str! {
    #name = "hello",
    #name = "world",
    #world = "world",
    #world = "world"
    =>
}

fn main() {}
